--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>School Website</title>
+    <title>Philippine Nikkei Jin Kai International School</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
