--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </section>
         <section id="history">
             <h2>History</h2>
-            <p>Founded in [year], PNJKIS has a rich history of excellence in education. Over the decades, we have remained dedicated to our mission of providing high-quality learning opportunities that empower students to reach their full potential. From our humble beginnings to our present-day achievements, our commitment to academic excellence and student success has remained unwavering.</p>
+            <p>Founded in June 1992, PNJKIS has a rich history of excellence in education. Over the decades, we have remained dedicated to our mission of providing high-quality learning opportunities that empower students to reach their full potential. From our humble beginnings to our present-day achievements, our commitment to academic excellence and student success has remained unwavering.</p>
         </section>
         <section id="mission">
             <h2>Mission & Vision</h2>
