--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
         <section id="principal">
             <h2>Principal's Message</h2>
-            <p>Welcome from [Principal's Name], the principal of PNJKIS. It is my privilege to lead this vibrant learning community, where every student is valued and supported in their academic and personal journey. At PNJKIS, we are committed to fostering a supportive and inclusive environment that promotes academic excellence, character development, and lifelong learning.</p>
+            <p>Welcome from Lucia D. Josol, the principal of PNJKIS. It is my privilege to lead this vibrant learning community, where every student is valued and supported in their academic and personal journey. At PNJKIS, we are committed to fostering a supportive and inclusive environment that promotes academic excellence, character development, and lifelong learning.</p>
         </section>
         <section id="faculty">
             <h2>Faculty</h2>
