--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </section>
         <section id="map">
             <h2>Map & Directions</h2>
-            <p>Find your way to PNJKIS with our map and directions. Located in [insert location], our campus is easily accessible by [insert transportation options]. Whether you're coming from near or far, use our map to navigate to PNJKIS and join us on campus for a tour or event. We look forward to welcoming you to our community.</p>
+            <p>Find your way to PNJKIS with our map and directions. Located in Angliongto Ave, Buhangin, Davao City, 8000 Davao del Sur, our campus is easily accessible by Public Transportation. Whether you're coming from near or far, use our map to navigate to PNJKIS and join us on campus for a tour or event. We look forward to welcoming you to our community.</p>
         </section>
         <section id="faqs">
             <h2>FAQs</h2>
